--- a/Xplore/Scratch/todo.txt
+++ b/Xplore/Scratch/todo.txt
@@ -1,12 +1,9 @@
 MuMenu
     branch
-        slide branch change node bug
         light material background
     node
         tog without child
     home
-        drag to expand branches
-        double tap to execute leaf
         leaf icon in retracted home
     leaf
         ipad pencel vxy center
@@ -15,6 +12,7 @@ MuMenu
         emboss thumb with icon
         special title
         touch long press lift no change
+        vx, vy, hx, hy, vxy -> xy
 
     sync devices
 
