menu + canvas multitouch

--- a/Xplore/Scratch/todo.txt
+++ b/Xplore/Scratch/todo.txt
@@ -1,13 +1,15 @@
 MuMenu
+    Touch
+        fix double tap on separate nodes
     branch
-        light material background
+
     node
         tog without child
     home
         leaf icon in retracted home
     leaf
         ipad pencel vxy center
-        double tap to revert back to default
+
         hide super branches while editing
         emboss thumb with icon
         special title
@@ -17,6 +19,8 @@ MuMenu
     sync devices
 
 Sky
+    touche
+        multitouch dispatch menu + canvas
     bugs
         camera
         Autorotate autofit view
@@ -27,13 +31,12 @@ Sky
 
 Tr3
     get a(b 1) as find("a.b")
-    Expr quote dump
     a.*.{ decorate } for sky
     test connect by name `menu.model :> shader.model`
     snapshot abstract def with updated state
 
     later
-        replace Tr3ValScalar, Tr3ValQuote with Tr3Exprs
+        replace Tr3ValScalar with Tr3Exprs
         update tr3val min
 
 
